--- a/Pages/Checkout/ThankYou.cshtml
+++ b/Pages/Checkout/ThankYou.cshtml
@@ -1,2 +1,11 @@
 @page
-<p>Thank you!</p>
+@model new_pizza_delivery.Pages.Checkout.ThankYouModel
+@{
+}
+<div class="text-center
+    align-content-center
+    container">
+    <h1>Duncan Idaho approves</h1>
+    <h3>The Spacer's Guild is en route with your pizza</h3>
+    <img src="~/images/duncan.png">
+</div>
