--- a/Pages/Checkout/Checkout.cshtml
+++ b/Pages/Checkout/Checkout.cshtml
@@ -1,3 +1,27 @@
 @page
-
-<a class="nav-link text-dark" asp-area="" asp-page="../Checkout/ThankYou">ThankYou</a> 
+@model new_pizza_delivery.Pages.Checkout.CheckoutModel
+@{
+}
+<h1>Your Order:</h1>
+@{
+    var imagePath = "~/images/Pizzas/" + (@Model.ImageTitle + ".png");
+}
+<div class="align-content-center">
+    <div class="col-3 mx-auto mb-5">
+        <img class="w-100" 
+            asp-append-version="true"
+            src=@imagePath 
+        />
+        <p>Your order for the @Model.PizzaName Pizza is ready!</p>
+        <p>Total price for your order is: $@Model.PizzaPrice</p>
+        <br/>
+        <a class="btn 
+            btn-primary 
+            mt-1 
+            mx-auto" 
+            asp-area="" 
+            asp-page="ThankYou">
+            Confirm
+        </a>
+    </div>
+</div>
