--- a/Pages/Forms/CustomPizza.cshtml
+++ b/Pages/Forms/CustomPizza.cshtml
@@ -1,3 +1,72 @@
 @page
-
-<a class="nav-link text-dark" asp-area="" asp-page="../Checkout/Checkout">Checkout</a> 
+@model new_pizza_delivery.Pages.Forms.CustomPizzaModel
+@{
+}
+<div class="text-center container">
+    <h1>Create Your Own Pizza!</h1>
+    <form method="post"
+        class="mx-auto 
+            mt-5 
+            mb-5 
+            px-5 
+            pt-5
+            pb-5
+            rounded-5 
+            bg-light 
+            col-4">
+        <input 
+            type="text" 
+            asp-for="Pizza.PizzaName"
+            placeholder="Name your custom pizza" 
+        />
+        </br>
+        <input 
+            type="checkbox"
+            asp-for="Pizza.TomatoSauce"
+            placeholder="Tomato Sauce"
+        />Tomato Sauce
+        </br>
+        <input 
+            type="checkbox"
+            asp-for="Pizza.Cheese"
+            placeholder="Cheese"
+        />Cheese
+        </br>
+        <input 
+            type="checkbox"
+            asp-for="Pizza.Pepperoni"
+            placeholder="Pepperoni"
+        />Pepperoni
+        </br>
+        <input 
+            type="checkbox"
+            asp-for="Pizza.Anchovies"
+            placeholder="Anchovies"
+        />Anchovies
+        </br>
+        <input 
+            type="checkbox"
+            asp-for="Pizza.Mushrooms"
+            placeholder="Mushrooms"
+        />Mushrooms
+        </br>
+        <input 
+            type="checkbox"
+            asp-for="Pizza.Pineapple"
+            placeholder="Pineapple"
+        />Pineapple
+        </br>
+        <input 
+            type="checkbox"
+            asp-for="Pizza.Beef"
+            placeholder="Beef"
+        />Beef
+        </br> 
+        <button class="btn 
+            btn-primary 
+            mt-1" 
+            type="submit">
+            Place Order
+        </button>
+    </form>
+</div>
